name:                conduit-arrow
version:             0.1.0.0
synopsis:            Arrow instance for Conduit
description:         Please see README.md
homepage:            https://github.com/farrellm/conduit-arrow#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Farrell
maintainer:          farrellm@alum.mit.edu
copyright:           2016 Matthew Farrell
category:            Conduit
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Conduit.Arrow
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , conduit-combinators
                     , mono-traversable
  default-language:    Haskell2010

test-suite conduit-arrow-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , conduit-arrow
                     , QuickCheck
                     , checkers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/farrellm/conduit-arrow
